manifests/storage-example.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: storage-example
