manifests/letsencrypt.yml
apiVersion: v1
kind: Namespace
metadata:
  name: letsencrypt
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: letsencrypt
  namespace: letsencrypt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: letsencrypt
  template:
    metadata:
      labels:
        app: letsencrypt
    spec:
      containers:
      - name: letsencrypt
        image: maksimstojkovic/docker-letsencrypt
        volumeMounts:
        - mountPath: /etc/letsencrypt
          name: certs
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 100mm
            memory: 100Mi
      volumes:
      - name: certs
        hostPath:
          path: /home/janhein/certs
