manifests/exampe-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: example-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app
  namespace: example-app
  labels:
    app: example-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: example-app
  template:
    metadata:
      labels:
        app: example-app
    spec:
      containers:
      - name: example-app
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: example-app-volume
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 200m
            memory: 100Mi
      volumes:
      - name: example-app-volume
---
apiVersion: v1
kind: Service
metadata:
  name: example-app
  namespace: example-app
spec:
  type: LoadBalancer
  selector:
    app: example-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
