manifests/home-assistant.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home-assistant
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
      - name: home-assistant
        image: homeassistant/home-assistant:latest
        ports:
        # For accessing Home Assistant
        - containerPort: 8123
        # For Sonos
        - containerPort: 1400
        volumeMounts:
        - mountPath: /config
          name: home-assistant
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 500Mi
      volumes:
      - name: home-assistant
        persistentVolumeClaim:
          claimName: home-assistant-pvc 
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-lb
  namespace: home-assistant
spec:
  type: LoadBalancer
  selector:
    app: home-assistant
  ports:
    - port: 8123
      targetPort: 8123
      name: home-assistant
    - port: 1400
      targetPort: 1400
      name: sonos
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  type: ClusterIP
  selector:
    app: home-assistant
  ports:
    - protocol: TCP
      port: 8123
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  rules:
  - host: home-assistant.home
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: home-assistant
              port:
                number: 8123
